Fixed overflowing goobers and fixed 404

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -290,7 +290,7 @@ article.hubs {
 
 @media screen and (max-width: 1000px) {
     .goober {
-        visibility: hidden;
+        display: none;
     }
     
     .videoSection > iframe {
